--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -5,7 +5,9 @@
 body {
   font-family: Roboto, Arial, Helvetica, sans-serif;
 }
-
+* {
+  scroll-behavior: smooth;
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
